--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
   - 2.2.1
   - 2.2.2
 before_install:
-- gem install bundler
+  - gem install bundler
+script: "bundle exec rspec"
 deploy:
   provider: rubygems
   api_key:
